fixing remember me alignment on the login screen

--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -31,7 +31,7 @@ p.form-title
 
 form
 {
-  width: 250px;
+  width: 300px;
   margin: 0 auto;
 }
 
